Updated REST documentation for endpoints, temporarily disabled samples retrieval
