# docs/swagger.json
@@ -55,7 +55,7 @@
                         "headers": {
                             "Location": {
                                 "type": "string",
-                                "description": "Location of the campaign object."
+                                "description": "Location of the new campaign object."
                             }
                         }
                     },
@@ -72,7 +72,7 @@
                         "BasicAuth": []
                     }
                 ],
-                "description": "Returns a list of all recorded campaigns (that were successfully started).",
+                "description": "Returns a list of campaigns that were successfully started. Will return all campaigns unless either of the query parameters is set.",
                 "produces": [
                     "application/json"
                 ],
@@ -80,13 +80,27 @@
                     "data"
                 ],
                 "summary": "List campaigns",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Matches campigns which contain ALL these sensors as a comma-separated list.",
+                        "name": "sensors",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Matches a single campaign by its unique ID.",
+                        "name": "campaignId",
+                        "in": "path"
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "All recorded campaigns",
+                        "description": "All recorded campaigns which match the given parameters",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/database.Campaign"
+                                "$ref": "#/definitions/models.Campaign"
                             }
                         }
                     },
@@ -103,7 +117,7 @@
                         "BasicAuth": []
                     }
                 ],
-                "description": "Returns a list of all connected nodes by their hardware ID. Will time out in 300ms if any one of the nodes does not respond.",
+                "description": "Returns a list of all connected nodes by their hardware ID. Will time out in `300ms` if any one of the nodes does not respond.",
                 "produces": [
                     "application/json"
                 ],
@@ -164,93 +178,6 @@
                 }
             }
         },
-        "/nodes/{sensor_id}/campaigns": {
-            "get": {
-                "security": [
-                    {
-                        "BasicAuth": []
-                    }
-                ],
-                "description": "Returns all campaigns where the given sensor was requested to take part in.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "data"
-                ],
-                "summary": "Get all campaigns a specific node took part in",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Node hardware ID",
-                        "name": "sensor_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "List of campaign the sensor took part in",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/database.Campaign"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Generally a database error"
-                    }
-                }
-            }
-        },
-        "/nodes/{sensor_id}/campaigns/{campaign_id}": {
-            "get": {
-                "security": [
-                    {
-                        "BasicAuth": []
-                    }
-                ],
-                "description": "Returns all samples received by the given sensor and belonging to the given campaign.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "data"
-                ],
-                "summary": "Get all samples received from a specific sensor and belonging to a specific campaign",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Node hardware ID",
-                        "name": "sensor_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Campaign ID",
-                        "name": "campaign_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "List of samples received by the given sensor during the given campaign",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/database.Sample"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Generally a database error"
-                    }
-                }
-            }
-        },
         "/raw": {
             "post": {
                 "security": [
@@ -281,12 +208,18 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Bare statistics for all nodes in the measurement campaign. Will always include sensor status information.",
                         "schema": {
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/stats.Stats"
+                            }
+                        },
+                        "headers": {
+                            "Location": {
+                                "type": "string",
+                                "description": "Location of the new campaign object."
                             }
                         }
                     },
@@ -345,7 +278,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/database.Sample"
+                                "$ref": "#/definitions/models.Sample"
                             }
                         }
                     },
@@ -357,7 +290,7 @@
         }
     },
     "definitions": {
-        "database.Campaign": {
+        "models.Campaign": {
             "type": "object",
             "properties": {
                 "begin": {
@@ -388,27 +321,16 @@
                 }
             }
         },
-        "database.Sample": {
+        "models.Sample": {
             "type": "object",
             "properties": {
-                "Time": {
-                    "type": "string"
-                },
-                "antennaGain": {
-                    "description": "Antenna gain in dBi",
-                    "type": "number"
-                },
-                "antennaId": {
-                    "description": "Identifier for the antenna being used if device has multiple antennas",
-                    "type": "integer"
-                },
                 "campaignId": {
                     "description": "Unique identifier for the campaign this sample belongs to",
                     "type": "string"
                 },
-                "centerFreq": {
-                    "description": "Center frequency in Hz to which the RF front-end was tuned to while recording the associated spectrum data",
-                    "type": "integer"
+                "config": {
+                    "description": "Sensor configuration for the recorded data set",
+                    "$ref": "#/definitions/models.SampleConfig"
                 },
                 "createdAt": {
                     "type": "string"
@@ -419,6 +341,35 @@
                     "items": {
                         "type": "number"
                     }
+                },
+                "sampleType": {
+                    "description": "Sample type string (IQ, PSD, DEC)",
+                    "type": "string"
+                },
+                "sensorId": {
+                    "description": "The unique hardware id of the sensor",
+                    "type": "string"
+                },
+                "time": {
+                    "description": "Sample timestamp with microseconds precision",
+                    "$ref": "#/definitions/models.SampleTime"
+                }
+            }
+        },
+        "models.SampleConfig": {
+            "type": "object",
+            "properties": {
+                "antennaGain": {
+                    "description": "Antenna gain in dBi",
+                    "type": "number"
+                },
+                "antennaId": {
+                    "description": "Identifier for the antenna being used if device has multiple antennas",
+                    "type": "integer"
+                },
+                "centerFreq": {
+                    "description": "Center frequency in Hz to which the RF front-end was tuned to while recording the associated spectrum data",
+                    "type": "integer"
                 },
                 "estNoiseFloor": {
                     "description": "Estimated noise floor in dB",
@@ -449,17 +400,9 @@
                     "description": "Time synchronization of the radio frontend (0: none, 1: GPS, 2: Reference Clock, 5: Other)",
                     "type": "integer"
                 },
-                "sampleType": {
-                    "description": "Sample type string (IQ, PSD, DEC)",
-                    "type": "string"
-                },
                 "samplingRate": {
                     "description": "Sensor's sampling rate in samples per second",
                     "type": "integer"
-                },
-                "sensorId": {
-                    "description": "The unique hardware id of the sensor",
-                    "type": "string"
                 },
                 "sigStrengthCalibration": {
                     "description": "True if signal strength is calibrated",
@@ -468,6 +411,19 @@
                 "systemSync": {
                     "description": "Time synchronization of the system (0: none, 1: GPS, 2: Reference Clock, 3: NTP, 4: OpenSky, 5: Other)",
                     "type": "string"
+                }
+            }
+        },
+        "models.SampleTime": {
+            "type": "object",
+            "properties": {
+                "microseconds": {
+                    "description": "Microseconds extension for the UNIX time stamp",
+                    "type": "integer"
+                },
+                "seconds": {
+                    "description": "Number of seconds since the UNIX epoch start on January 1st, 1970 at UTC",
+                    "type": "integer"
                 }
             }
         },
